[tool.poetry]
name = "hw21-2"
version = "0.1.0"
description = ""
authors = ["Yuliya Kuznetsova <juliakuznetsova001@gmail.com>"]
readme = "README.md"
packages = [{include = "hw21"}]

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
